fix: removed copyright

--- a/www/contact.html
+++ b/www/contact.html
@@ -223,8 +223,7 @@
         </div>
 
         <footer>
-            <p>Arkham Investigator - A Digital Investigator Board for Arkham Horror: The Card Game</p>
-            <p style="margin-top: 10px; font-size: 0.9em;">This is an unofficial, fan-made companion app for tabletop players. It is not affiliated with or endorsed by Fantasy Flight Games or any other rights holder. All artwork and text are used for reference and educational purposes only. No copyrighted materials are sold, redistributed, or modified for commercial gain.</p>
+            <p>Arkham Investigator - A Digital Investigator Board</p>
         </footer>
     </div>
 </body>
