fix: discord info

--- a/www/contact.html
+++ b/www/contact.html
@@ -176,8 +176,8 @@
             <div class="contact-card">
                 <a href="https://discord.com/channels/225349059689447425/1351550310887460926" target="_blank" rel="noopener noreferrer">
                     <div class="icon">💬</div>
-                    <div class="contact-title">Discord</div>
-                    <div class="contact-url">Join our community</div>
+                    <div class="contact-title">Discord Topic</div>
+                    <div class="contact-url">On Mythos Busters Channel (join it first)</div>
                 </a>
             </div>
 
